--- a/style.css
+++ b/style.css
@@ -1628,3 +1628,92 @@ font-weight: 400;
 .horoscopeswiperimgbox img{
     object-fit: fill;
 }
+/* list component css   */
+    *{margin: 0;padding: 0;box-sizing: border-box;}
+
+.listbox{
+   padding-top: 20px;
+   margin-top: 40px;
+    border-top: 1px solid rgb(191, 190, 190);
+}
+  
+.mainlist{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin-top: 20px;
+    position: relative;
+}
+.listitem{
+position: relative;
+overflow: hidden;
+height: 180px;
+width: 300px;
+}
+.listimagebox{
+    height: 100%;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+}
+.listimagebox img{
+    height: 100%;
+    width: 100%;
+    object-fit: fill;
+    position: relative;
+    z-index: 0;
+    transition: transform 0.5s ease;
+}
+.listimageboxdets{
+    position:absolute;
+    bottom: 0;
+    text-align: left;
+    color: white;
+    z-index: 3;
+    padding: 0px 10px;
+    width: 100%;
+    font-size: 18px;
+    font-weight: 600;
+}
+.newdets{
+    font-size: 16px;
+    font-weight: 800;
+}
+.listimagebox::before {
+content: "";
+position: absolute;
+inset: 0;
+background: rgba(0, 0, 0, 0.4); 
+z-index: 1;
+}
+
+.listtitle{
+    font-size: 20px;
+    font-weight: 600;
+}
+.listitem:hover .listimagebox img{
+    transform: scale(1.1);
+}
+.listmainbox{
+    display: flex;
+    gap: 30px;
+}
+.mainlist{
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    gap: 10px !important;
+}
+.datefaded{
+    opacity: 0.8;
+    color: white;
+    text-align: center;
+    font-size: 14px;
+    
+}
+.colmainoxlist{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    /* gap: 50px; */
+}
