lin delhi ncr page

--- a/style.css
+++ b/style.css
@@ -1468,7 +1468,7 @@ font-weight: 400;
 }
 
 }   
-
+/* horoscope slider css starts from here     */
 .horoscopemainbox{
     margin-bottom: 250px;
  }
