--- a/style.css
+++ b/style.css
@@ -1927,3 +1927,284 @@ z-index: 1;
     width :70%;
     padding:5px 0px;
 }
+/* supporting pages css starts from here  */
+
+.breadcrumb-box{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin: 30px 0px;
+}
+.breadcrumb a{
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+}
+.fadedbreadcrumb{
+    opacity: 0.7;
+}
+.headersection{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+    flex-direction: column;
+}
+.herosection{
+    margin-top: 70px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.herols{
+    width: 62%;
+}
+.headertitle{
+    font-size: 36px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.headerdets{
+    opacity: 0.8;
+}
+.herolscardunorderedlist{
+    width: 100%;
+    list-style:none;
+    display: flex;
+    justify-content: space-between;
+}
+.herolscardlistitem{
+    width: 350px;
+}
+.herolscardimgbx{
+    width: 350px;
+    height: 200px;
+    overflow: hidden;
+    position: relative;
+    border-radius: 5px;
+}
+.searchbarbox{
+    font-family: "Montserrat", serif !important;
+    font-size: 18px;
+}
+.herolscardimgbx:hover img{
+    transform: scale(1.05);
+    transition: all 0.4s ease-in-out;
+}
+.herolscardimgbx img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.btnonimg{
+    background-color: #fff;
+    color: red;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 12px;
+    padding: 2px 15px;
+}
+.btnonimgbx{
+    position: absolute;
+    display: flex;
+    margin-left: 10px;
+    gap: 10px;
+    width: 100%;
+    color: red;
+    margin-top: 10px;
+    top: 0;
+}
+.herolscardcontentbx{
+    margin-top: 10px;
+}
+.herolscardtitle{
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 10px;
+    padding: 0px 5px;
+}
+.herocarddate{
+    opacity: 0.7;
+    font-size: 12px;
+    font-weight: 500;
+    margin-bottom: 10px;
+    padding: 0px 5px;
+}
+.herolsreadmore{
+    text-transform: capitalize;
+    text-decoration: underline;
+    padding: 0px 5px;
+    cursor: pointer;
+    font-weight: 200;
+    font-size: 15px;
+    display: inline;
+        font-family: "Montserrat", serif !important;
+
+}
+.herolsreadmore:hover{
+    text-decoration: none;
+}
+.supportingpagesearchbar{
+    width: 350px;
+    height: 45px;
+    display: flex;
+    overflow: hidden;
+    margin-top: 20px;
+}
+.supportingpagesearchinput:focus{
+    border:1px solid #C23237;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.supportingpagesearchinput{
+    height: 45px;
+    margin: 0;
+    width: 80%;
+    padding: 5px 10px;
+    outline: none;
+    border: 1px solid rgba(220, 216, 216, 0.909);
+    transition: all 0.3s ease-in-out;
+}
+
+.supportingpagesearchbtn{
+    height: 45px;
+    background-color: #C23237;
+    color: white;
+    border: none;
+    padding: 0px 18px;
+    cursor: pointer;
+    width: 20%;
+}
+.supportingpagesearchinput::placeholder{
+    font-size: 14px;
+    color: grey;
+    font-style: italic;
+}
+.herors{
+    width: 30%;
+}
+.latestnewstitle{
+    font-family: "Montserrat", serif !important;
+    text-transform: uppercase;
+}
+.latestnewslist{
+    list-style: none;
+padding: 0px;
+margin-top: 30px;
+}
+.latestnewssection{
+    margin-top: 40px;
+    font-size: 18px;
+    font-weight: 600;
+}
+.cardbody{
+    display: flex;
+    margin-bottom: 15px;
+    gap: 10px;
+    width: 350px;
+    border: 1px solid rgb(235, 233, 233);
+    padding: 5px;
+    margin-top: 10px;
+}
+.latestnewsdets{
+    font-weight: 600;
+}
+.latestnewsimgbx{
+    width: 150px;
+    height: 70px;
+    overflow: hidden;
+}
+.latestnewsimgbx img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.scheduledate{
+    font-size: 12px;
+    opacity: 0.7;
+    margin-top: 5px;
+}
+.preview{
+    font-size: 15px;
+    margin-top: 5px;
+    opacity: 0.8;
+    font-weight: 500;   
+    font-family: "Montserrat", serif !important;
+    text-decoration: underline;
+    cursor: pointer;
+
+}
+.preview:hover{
+    text-decoration: none;
+}
+.heropagenavigator{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border-top: 1px solid rgb(221, 218, 218);
+    border-bottom: 1px solid rgb(221, 218, 218);
+    padding: 20px 0px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+}
+.navigatorlistbox{
+   display: flex;
+    gap: 25px;
+    list-style: none;
+}
+.heropagenavigatorlistitem{
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.heropagenavigatorlistitem a{
+    text-decoration: none;
+    color: black;
+    font-weight: 600;
+}
+.heropagenavigatorlistitem:focus{
+    background-color: #E62323;
+    color: white;
+}
+.relatedtopiccardsbox{
+    margin-top: 20px;
+}
+.relatedtopiccardcardlistitem{
+    width: 280px;
+    list-style: none;}
+.relatedtopiccardunorderedlist{
+    padding: 0;
+    display: flex;
+    /* gap: 20px; */
+    justify-content: space-between;
+}
+.relatedtopiccardcardimgbx{
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 10px;
+}
+.relatedtopiccardcardimgbx:hover img{
+    transform: scale(1.05);
+    transition: all 0.4s ease-in-out;
+}
+.relatedtopiccardcardimgbx img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.relatedtopiccardtitle{
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    padding: 0px 5px;
+    margin: 10px 0px;
+}
+.headerdets{
+    text-align: center;
+}
