add arrow on tape

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ html,body{
     /* height: 3.5vh; */
     min-width: 100vw; 
     flex-wrap: nowrap; 
-    background-color: #b81c1c;  
+    background-color: #b81c1c; 
 }
 .news-tape-container ul{
     height: 100%;
@@ -41,6 +41,7 @@ html,body{
     animation: scroll 10s linear infinite;
     
 }
+
 @keyframes  scroll{
     to{
         transform: translateX(100%);
@@ -236,6 +237,8 @@ html,body{
     /* justify-content: center; */
     padding: 10px;
     border: 1px solid rgb(214, 214, 214);
+    position: relative;
+    padding-left: 1px;
 }
 .hero-upper-tape ul{
     height: 100%;
@@ -247,6 +250,63 @@ html,body{
      margin: 0px;
      gap: 50px;
 }
+.arrowontape{
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.rightarrowontapebox{
+    display: flex;
+    gap: 5px;
+    height: 100%;
+    background-color: #fff;
+    padding-right: 10px;
+}
+.leftarrowontape{
+    background-color: #C23237;
+    color: white;
+    padding: 8px;
+   margin: 3px 0px;
+   width: 40px;
+   display: flex;
+   justify-content: center;
+}
+.leftarrowontape i{
+    color: white;
+}
+.leftarrowontape:hover{
+    background-color: rgba(14, 13, 13, 0.267);
+    cursor: pointer;
+}
+.rightarrowontape:hover{
+    background-color: rgba(14, 13, 13, 0.267);
+    cursor: pointer;
+}
+.rightarrowontape{
+    background-color: #C23237;
+    color: white;
+    padding: 8px;
+   margin: 3px 0px;
+   width: 40px;
+   display: flex;
+   justify-content: center;
+}
+.lefttrending{
+    background-color: #C23237;
+    color: white;
+    display: flex;
+    align-items: center;
+    padding: 0px 15px;
+    gap: 5px;
+    margin: 3px 0px;
+}
+.flashlighticn i{
+       color: yellow;
+}
+
 .atg1{
     text-decoration: none;
     color: black;
