--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 *{margin: 0;padding: 0;box-sizing: border-box;}
 
-html,body{
-    height: 100%;
-}
+/* * {
+  outline: 1px solid black;
+} */
+
 .tradingview-widget-container{
-    height: 2.3vw !important;
+    height: 40px !important;
 }
 .mainnav{
     display: flex;
@@ -34,7 +35,6 @@ html,body{
     gap: 2vw;
     justify-content: center;
     align-items: center;
-     /* background-color: #dadada;   */
      margin: 0px;
 }
 .news-tape-container ul li{
@@ -169,64 +169,73 @@ html,body{
     font-size: 25px;
     cursor: pointer;
 }
-.sidebar{
-    top: 0;
-    width: 300px;
-    background-color: white;
-    padding: 20px 15px;
-}
-.sidebarcontainer{
-    top: 0;
-    position: absolute;
-    width: 325px;
-     background-color: white; 
-     display: none;
-     z-index: 2;
-}
-.closedicon{
-    display: flex;
-    justify-content: flex-end;
-    font-size: 30px;
-    padding: 10px;
-    cursor: pointer;
-    font-weight: 600;
-    height: 40px;
-    width: 100%;
-    
-}
-.headerimg{
-    height: 50px;
-    width: 150px;
-    overflow: hidden;
-    margin-bottom: 25px;
-}
-.headerimg img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
 
+
+#menu{
+    font-size: 30px;
+    background-color: #C23237;
+    color: white;
+    padding-right: 25px;
+    padding-left: 25px;
+}
 .sidebarmenu{
     list-style: none;
 }
+
 .sidebarmenu li a{
-    
-    color:#b81c1c;
     text-decoration: none;
-    line-height: 2.5;
+    color: #C23237;
+    line-height: 1.8;
     font-weight: 600;
+}
+.sociallinks {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    justify-content: center;
+}
+.sociallinks a{
+ text-decoration: none;
+ font-size: 20px;
+ color: black;
+ opacity: 0.8;
+}
+.offcanvas-body{
+    padding: 0 !important;
+}
+.sidebarmenulistitem{
+    margin-top: 20px !important;
+}
+.offcanvas-header{
+    margin-top: 0 !important;
+    padding-bottom: 0 !important;
+}
+#sidebarlogoimg{
+    margin: 0px;
+    padding: 0px;
+}
+.closesidemenubtn:hover{
+    transform: rotate(180deg) scale(1.5);
+    
+}
+.closesidemenubtn{
+    transition: transform 0.5s ease-in-out;
 }
 .sociallinks{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 2px;
-    font-size: 25px;
-   
+    gap: 8px;
 }
 .sociallinks a{
-     text-decoration: none; 
-     color: black;
+    font-style: none;
+    font-size: 25px;
+    transition: all 0.3s ease-in-out;
+}
+.sociallinks a:hover{
+    transform: scale(1.1);
+}
+.sidebarmenu li{
+    margin-top: 10px;
+        margin-left: 30px;
 }
 .hero-upper-tape{
     font-size: 15px;
@@ -467,9 +476,9 @@ html,body{
     display: flex;
     justify-content: space-between;
 }
-@media (max-width:1250px){
+@media (max-width:1000px){
     .swipersideimgbox{
-        display: none;
+      display: none;
     }
     .slider-container{
         width: 100% ;
@@ -485,6 +494,11 @@ html,body{
     width: 70%;
     display: flex;
     overflow: hidden;
+}
+@media (max-width:768px) {
+    .cards-container{
+        flex-direction: column;
+    }
 }
 .card{
     width: 90%;
@@ -574,13 +588,67 @@ html,body{
     padding: 5px;
     text-align: center;
 }
-@media (max-width:1250px){
+@media (max-width:1200px){
     .jwelldets{
-        display: none;
+        width: 100%;
     }
     .cards-container{
         width: 100% ;
     }
+    .crdcol{
+        flex-direction: column;
+    }
+    .statewisenewslistmainbox, .statewisenewslistmainboxlast, .listmainbox{
+        flex-direction: column;
+        display: flex;
+    }
+    .colmainoxlist, .popularnews{
+        display: flex;
+        flex-direction: column !important;
+    }
+    .newscardlistitem, .popularimagebox, .popularnewslistitem{
+        width: 100% !important;
+    }
+    .latestblogssection {
+    width: 100% !important;
+}
+.popularnowsection {
+    width: 100%;
+    margin-top: 50px;
+}
+.popularnowsection {
+    width: 100% !important;
+    margin-top: 50px;
+}
+.footercategories {
+    display: flex
+;
+    list-style: none;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+    gap: 8px !important; 
+    background: black;
+}
+.listitem {
+    position: relative;
+    overflow: hidden;
+    height: 250px !important; 
+    width: 100% !important;
+}
+.statewisenewslist {
+    list-style: none;
+    background-color: white;
+    margin-top: 10px;
+    width: 100% !important;
+    padding: 0px;
+    overflow: hidden;
+}
+.statewisenewslistitem {
+    height: 300px;
+    width: 100% !important;
+    margin-top: 20px;
+}
 }
 .add2{
     padding: 30px 0px;
@@ -606,9 +674,14 @@ html,body{
 }
 
 /* webstory swiper css */
+.webstoryouterdiv{
+    background-color: black;
+    width: 100vw;
+
+}
     .webstory-box{
         background-color: black;
-        width: 100vw !important;
+        width: 100% !important;
         padding: 40px;
     }
 
@@ -919,6 +992,10 @@ html,body{
 #youtubePlayer{
     border-radius: 15px;
 }
+.vediocompstoryouterdiv{
+    width: 100vw !important;
+    background-color: black;
+}
 .vedio-comp{
     display: flex;
     flex-direction: column;
@@ -1183,8 +1260,8 @@ background: black;
     transform: scale(1.05);
 }
  /* footer starts from here  */
-.outerdiv{
-    width: 100vw;
+.footerouterdiv{
+  max-width: 100vw ;
     background: black;
     margin-top: 100px;
 }
@@ -1504,9 +1581,9 @@ font-weight: 400;
     font-weight: 500;
 }
 @media(max-width:724px){
-    .outerdiv{
+    /* .outerdiv{
         height: 100vh;
-    }
+    } */
     .footermidpartbox{
         flex-direction: column;
     }
@@ -1664,7 +1741,7 @@ font-weight: 400;
 .horoscopesliderimg img{
     margin-bottom: 8px;
 }
-.horoscopesliderimg a{
+.horoscopesliderimg {
     text-decoration: none;
     color: black;
     font-weight: 600;
@@ -1775,7 +1852,7 @@ z-index: 1;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    /* gap: 50px; */
+    gap: 50px;
 }
 *{margin: 0;padding: 0;box-sizing: border-box;}
 .latestblogssection{
@@ -1824,7 +1901,6 @@ z-index: 1;
     text-align: center;
     font-size: 12px;
     font-weight: 600;
-    /* border-bottom: 1px solid rgb(202, 202, 202); */
 }
 .popularnewsunorderedlist{
     list-style: none;
@@ -2221,13 +2297,18 @@ margin-top: 30px;
     align-items: center;
     justify-content: center;
 }
+
+
 .heropagenavigatorlistitem a{
     text-decoration: none;
     color: black;
     font-weight: 600;
 }
-.heropagenavigatorlistitem:focus{
-    background-color: #E62323;
+.heropagenavigatorlistitem.active a{
+    color: white;
+}
+.heropagenavigatorlistitem.active{
+    background: red;
     color: white;
 }
 .relatedtopiccardsbox{
@@ -2235,7 +2316,9 @@ margin-top: 30px;
 }
 .relatedtopiccardcardlistitem{
     width: 280px;
-    list-style: none;}
+    list-style: none;
+    cursor: pointer !important;
+    }
 .relatedtopiccardunorderedlist{
     padding: 0;
     display: flex;
@@ -2268,3 +2351,350 @@ margin-top: 30px;
 .headerdets{
     text-align: center;
 }
+
+.wsclosedicn{
+    outline: none !important;
+    border-radius: 50% !important;
+    background-color: white !important;
+    padding: 10px !important;
+    opacity: 1 !important;
+    transition: all 0.5s ease-in-out;
+}
+.webstoryclosedbtnbox{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+.wsclosedicn:hover{
+    transform: rotate(180deg);
+}
+
+@media (min-width: 1400px) {
+
+}
+
+@media (min-width: 1200px) {
+   
+}
+@media (min-width: 992px) {
+    
+}
+@media (min-width: 768px) {
+    
+}
+@media (min-width: 576px) {
+    
+}
+/* webstory modal js  */
+
+  .webstorymodal-box{
+        /* background-color: black; */
+        width: 100vw !important;
+        padding: 40px;
+    }
+
+    .webstorymodalswiper-box{
+        height: 95vh;
+       padding: 0 !important;
+        padding: 5px;
+    }
+    .swiper {
+      width: 100%;
+      height: 100%;
+    }
+
+    .swiper-slide {
+      text-align: center ;
+      font-size: 18px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .webstorymodalbody{
+        margin: 0 !important;
+        padding: 0 !important;
+    }
+    .swiper-slide img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+
+.webstorymodalswiper-box:hover .webstorymodalswiper-button-prev{
+    opacity: 1;
+}
+.webstorymodalswiper-box:hover .webstorymodalswiper-button-next{
+    opacity: 1;
+}
+.webstorymodalswiper-button-next:after, .swiper-rtl .webstorymodalswiper-button-prev:after {
+    content: '';
+}
+.webstorymodalswiper-button-next:after, .webstorymodalswiper-button-prev:after {
+    font-size: var(--swiper-navigation-size);
+    text-transform: none !important;
+    letter-spacing: 0;
+    font-variant: initial;
+    line-height: 1;
+}
+.webstorymodalswiper-button-next, .webstorymodalswiper-button-prev {
+    position: absolute;
+    top: var(--swiper-navigation-top-offset, 50%);
+    width: 30px;
+    height: 30px;
+    margin-top: calc(0px - (var(--swiper-navigation-size) / 2));
+    z-index: 10;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    background-color: red;
+    border-radius: 50%;
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+}
+
+.webstorymodalswiper-button-next:after, .webstorymodalswiper-button-prev:after {
+    font-size: var(--swiper-navigation-size);
+    text-transform: none !important;
+    letter-spacing: 0;
+    font-variant: initial;
+    line-height: 1;
+}
+.webstorymodalswiper-button-next, .swiper-rtl .webstorymodalswiper-button-prev {
+    right: var(--swiper-navigation-sides-offset, 10px);
+    left: auto;
+}
+    .webstorymodalswiper-button-prev, .swiper-rtl .web    .webstorymodalswiper-button-next {
+    left: var(--swiper-navigation-sides-offset, 10px);
+    right: auto;
+}
+
+.swiper-backface-hidden .swiper-slide {
+    transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.swiper-slide {
+    flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transition-property: transform;
+    display: block;
+}
+.swiper-wrapper {
+    transform: translate3d(0px, 0, 0);
+}
+.swiper-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: flex;
+    transition-property: transform;
+    transition-timing-function: var(--swiper-wrapper-transition-timing-function, initial);
+    box-sizing: content-box;
+}
+.webstorymodalsliderimgbox{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.webstorymodalsliderimgbox img{
+    object-fit: fill;
+}
+
+.webstorymodalsliderimgbox::before{
+    content: '';
+    position: absolute;
+    background: rgba(0,0,0,0.3);
+    height: 100%;
+    width: 100%;
+}
+.textonwebstorymodalsliderimgbox{
+    position: absolute;
+    width: 100%;
+    color: white;
+    z-index: 5;
+    text-align: center;
+    bottom: 10px;
+    font-weight: 600;
+    font-size: 20px;
+   
+    
+}
+.linearg{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 2;
+    background: linear-gradient(to top,rgba(250, 7, 7, 0.7),rgba(255, 86, 86, 0.301),rgba(129, 127, 127, 0.123) );
+    background-size: cover;
+     background-position: center;
+  background-repeat: no-repeat;
+}
+/* horoscope modal css  */
+.modalimgbx{
+    height: 200px;
+    width: 200px;
+}
+.hsmodalbody{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 0 !important;
+    padding-top: 0 !important;
+}
+.modalimgbx img{
+    height: 100%;
+    width: 100%;
+    object-fit: fill;
+}
+.hsmodalheader{
+    border: none !important;
+}
+.modaltitle{
+    font-size: 20px;
+    font-weight: 600;
+}
+.modaldate{
+    font-weight: 400;
+}
+.hsmodalbox{
+    margin: 70px 0px;
+}
+.breaking-news-wrapper .breaking-news-ticker li a {
+    display: block;
+    line-height: 30px;
+    color: #1f2024 !important;
+    font-size: 18px !important;
+    font-weight: 700;
+    font-family: "Open Sans", sans-serif;
+}
+.breaking-news-section {
+    background-color: #fff !important;
+    outline: 1px solid black;
+}
+.breaking-news-wrapper .breaking-news-nav button {
+    display: block;
+    float: left;
+    width: 40px;
+    height: 40px;
+    background-color: #B81C1C !important;
+    border: none;
+    color: #ffffff;
+    margin-left: 1px;
+}
+.breaking-news-wrapper .breaking-news-title {
+    display: block;
+    line-height: 30px;
+    padding: 5px 20px;
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 13px;
+    letter-spacing: 0.5px;
+    margin: 0;
+    text-transform: uppercase;
+    background-color: #B81C1C !important;
+}
+.breaking-news-title i{
+    color: yellow !important;
+}
+.breaking-news-wrapper{
+    padding: 10px 4px !important;
+    border: 1px solid rgb(216, 215, 215);
+}
+a {
+
+  text-decoration: none;
+
+}
+a:hover{
+    color:black !important;
+}
+.ticker-wrapper-h{
+	display: flex;	
+	position: relative;
+	overflow: hidden;
+	border: 1px solid #1c6547;
+    background-color: #B81C1C;
+    padding: 5px 0px;
+}
+.news-ticker-h{
+	display: flex;
+	margin:0;
+	padding: 0;
+	padding-left: 90%;
+	z-index: 999;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+	animation-name: tic-h;
+	animation-duration: 150s;
+	
+}
+.news-ticker-h:hover { 
+	animation-play-state: paused; 
+}
+
+.news-ticker-h li{
+	display: flex;
+	width: 100%;
+	align-items: center;
+	white-space: nowrap;
+	padding-left: 20px;
+    margin-left: 50px;
+    
+}
+
+.news-ticker-h li a{
+	color: #fff;
+	font-weight: bold;
+}
+
+@keyframes tic-h {
+	0% {
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+		visibility: visible;
+	}
+	100% {
+		-webkit-transform: translate3d(-100%, 0, 0);
+		transform: translate3d(-100%, 0, 0);
+	}
+}
+.atg{
+    display: flex;
+    
+}
+.breaking-news-section {
+    background-color: #fff !important;
+    outline: none !important;
+}
+#scrollUp {
+    width: 40px;
+    height: 40px;
+    background-color: white !important;
+    color: red !important;
+    right: 40px;
+    bottom: 40px;
+    text-align: center;
+    overflow: hidden;
+    border-radius: 50%;
+    outline: 1px solid red;
+} 
