--- a/style.css
+++ b/style.css
@@ -448,6 +448,7 @@
 .dets h4{
     font-size: 18px;
      margin-top: 20px;
+     color: #fff;
 }
 .dets p{
      margin: 0;
@@ -589,6 +590,26 @@
     text-align: center;
 }
 @media (max-width:1200px){
+    .herosection {  
+    width: 100%; 
+}
+    .herols {
+    width: 100% !important;
+}
+    .herolscardunorderedlist {
+    width: 100% !important;
+}
+    .herolscardimgbx {
+    width: 100%;
+}
+    .herolscardunorderedlist{
+        flex-direction: column;
+        width: 100%;
+    }
+    .herosection{
+        flex-direction: column;
+        width: 100%;
+    }
     .jwelldets{
         width: 100%;
     }
@@ -661,7 +682,6 @@
     object-fit: fill;
 }
 
-
 .webstories{
     width: 100%;
     text-align: center;
@@ -676,7 +696,7 @@
 /* webstory swiper css */
 .webstoryouterdiv{
     background-color: black;
-    width: 100vw;
+   
 
 }
     .webstory-box{
@@ -993,21 +1013,20 @@
     border-radius: 15px;
 }
 .vediocompstoryouterdiv{
-    width: 100vw !important;
     background-color: black;
 }
 .vedio-comp{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: black;
+    /* background-color: black; */
     padding: 50px;
     margin-bottom: 50px;
 
 }
 .vediocomp-swipercontainer{
         height: 500px;
-        width: 25%;
+        width: 30%;
         background-color: black;
         border-radius: 15px;
         
@@ -1166,20 +1185,82 @@
     font-weight: 600;
     font-size: 20px;
     width: 100%;
-   
-    /* height: 25px; */
-    display: inline;
+   margin-bottom: 10px;
+   gap: 10px;
+    display: flex;
+    align-items: center;
+}
+@keyframes blink {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+.blinkingicon{
+    height: 10px;
+    width: 10px;
+    /* background-color: red; */
+    outline: 0.5px solid red;
+    animation: blink 1s ease-in-out infinite  ;
 }
 .videocompbox{
     display: flex;
+    justify-content: space-between;
 }
-.vediocomponentcontainer{
-    background: black;
-    max-width: 100vw;
+
+.youtubeswiperbox
+{
+    width: 68%;
+    height: 500px;
 }
-.vediocomponentrow{
-background: black;
+/* ytplayer css  */
+.swiper {
+      width: 100%;
+      height: 100%;
+    }
+
+    .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      background: #444;
+      display: flex;
+      color: aliceblue;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .swiper-slide img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    video{
+        height: 100%;
+        margin-top: 0px !important;
+    }
+    .swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
+    display: flex;
+    bottom: var(--swiper-pagination-bottom, 8px);
+    top: var(--swiper-pagination-top, auto);
+    width: 100%;
+    justify-content: flex-end;
+
 }
+.swiper-pagination-bullet {
+    width: var(--swiper-pagination-bullet-width,var(--swiper-pagination-bullet-size,8px));
+    height: var(--swiper-pagination-bullet-height,var(--swiper-pagination-bullet-size,8px));
+    display: inline-block;
+    border-radius: var(--swiper-pagination-bullet-border-radius,50%);
+    background: #ffffff !important;
+    opacity: var(--swiper-pagination-bullet-inactive-opacity, .2);
+}
+
+
+
+/* vedio component ends here  */
 
 .titlebox{
     display: flex;
@@ -2538,6 +2619,7 @@ margin-top: 30px;
    
     
 }
+
 .linearg{
     position: absolute;
     height: 100%;
